tests/ui/union/union-deref.stderr
error: not automatically applying `DerefMut` through union field to target that might have `Drop` glue
  --> $DIR/union-deref.rs:13:14
   |
LL |     unsafe { u.f.0 = Vec::new() };
   |              ^^^
   |
   = help: writing to this reference calls the destructor for the old value
   = help: add an explicit `*` if that is desired, or call `ptr::write` to not run the destructor

error: not automatically applying `DerefMut` through union field to target that might have `Drop` glue
  --> $DIR/union-deref.rs:15:19
   |
LL |     unsafe { &mut u.f.0 };
   |                   ^^^
   |
   = help: writing to this reference calls the destructor for the old value
   = help: add an explicit `*` if that is desired, or call `ptr::write` to not run the destructor

error: not automatically applying `DerefMut` through union field to target that might have `Drop` glue
  --> $DIR/union-deref.rs:17:14
   |
LL |     unsafe { u.f.0.push(0) };
   |              ^^^
   |
   = help: writing to this reference calls the destructor for the old value
   = help: add an explicit `*` if that is desired, or call `ptr::write` to not run the destructor

error: not automatically applying `DerefMut` through union field to target that might have `Drop` glue
  --> $DIR/union-deref.rs:20:14
   |
LL |     unsafe { (&mut u).f.0 = Vec::new() };
   |              ^^^^^^^^^^
   |
   = help: writing to this reference calls the destructor for the old value
   = help: add an explicit `*` if that is desired, or call `ptr::write` to not run the destructor

error: not automatically applying `DerefMut` through union field to target that might have `Drop` glue
  --> $DIR/union-deref.rs:22:19
   |
LL |     unsafe { &mut (&mut u).f.0 };
   |                   ^^^^^^^^^^
   |
   = help: writing to this reference calls the destructor for the old value
   = help: add an explicit `*` if that is desired, or call `ptr::write` to not run the destructor

error: not automatically applying `DerefMut` through union field to target that might have `Drop` glue
  --> $DIR/union-deref.rs:24:14
   |
LL |     unsafe { (&mut u).f.0.push(0) };
   |              ^^^^^^^^^^
   |
   = help: writing to this reference calls the destructor for the old value
   = help: add an explicit `*` if that is desired, or call `ptr::write` to not run the destructor

error: not automatically applying `DerefMut` through union field to target that might have `Drop` glue
  --> $DIR/union-deref.rs:29:14
   |
LL |     unsafe { u.f.0.0 = Vec::new() };
   |              ^^^^^
   |
   = help: writing to this reference calls the destructor for the old value
   = help: add an explicit `*` if that is desired, or call `ptr::write` to not run the destructor

error: not automatically applying `DerefMut` through union field to target that might have `Drop` glue
  --> $DIR/union-deref.rs:31:19
   |
LL |     unsafe { &mut u.f.0.0 };
   |                   ^^^^^
   |
   = help: writing to this reference calls the destructor for the old value
   = help: add an explicit `*` if that is desired, or call `ptr::write` to not run the destructor

error: not automatically applying `DerefMut` through union field to target that might have `Drop` glue
  --> $DIR/union-deref.rs:33:14
   |
LL |     unsafe { u.f.0.0.push(0) };
   |              ^^^^^
   |
   = help: writing to this reference calls the destructor for the old value
   = help: add an explicit `*` if that is desired, or call `ptr::write` to not run the destructor

error: not automatically applying `DerefMut` through union field to target that might have `Drop` glue
  --> $DIR/union-deref.rs:36:14
   |
LL |     unsafe { (&mut u).f.0.0 = Vec::new() };
   |              ^^^^^^^^^^^^
   |
   = help: writing to this reference calls the destructor for the old value
   = help: add an explicit `*` if that is desired, or call `ptr::write` to not run the destructor

error: not automatically applying `DerefMut` through union field to target that might have `Drop` glue
  --> $DIR/union-deref.rs:38:19
   |
LL |     unsafe { &mut (&mut u).f.0.0 };
   |                   ^^^^^^^^^^^^
   |
   = help: writing to this reference calls the destructor for the old value
   = help: add an explicit `*` if that is desired, or call `ptr::write` to not run the destructor

error: not automatically applying `DerefMut` through union field to target that might have `Drop` glue
  --> $DIR/union-deref.rs:40:14
   |
LL |     unsafe { (&mut u).f.0.0.push(0) };
   |              ^^^^^^^^^^^^
   |
   = help: writing to this reference calls the destructor for the old value
   = help: add an explicit `*` if that is desired, or call `ptr::write` to not run the destructor

error: aborting due to 12 previous errors

